Prepare first release